--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ a {
 }
 
 .address-link:hover,
-.address-link:active {
+.address-link:focus {
     color: #404BBF;
 }
 
@@ -92,7 +92,7 @@ a {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-
+    cursor: pointer;
 }
 
 .button:focus {
@@ -115,7 +115,6 @@ a {
 
 .text{
     font-size: 16px;
-    font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
