--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ a {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
 .hero-section {
@@ -113,6 +114,7 @@ a {
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
+    color: #2e2f42;
 }
 
 .subtitle {
